

2018-09-29 Franz Holzinger <franz@ttproducts.de>
    * improvement: replace the ReflectionClass and the methods getProperties and getProperty by a conversion function from object to array from http://php.net/manual/en/function.get-object-vars.php . This is needed because a stdClass object did not show any member variables.

2018-09-22 Franz Holzinger <franz@ttproducts.de>
     * bugfix for TYPO3 9.3: add debugBegin and debugEnd to the patch for TYPO3 9.3.3

2018-09-13 Franz Holzinger <franz@ttproducts.de>
     * important bugtracker entry 86220 based on 23899: debugBegin and debugEnd is missing in TYPO3 9.3.3

2018-09-01 Franz Holzinger <franz@ttproducts.de>
     * add a Patches folder with the necessary patch of the file GlobalDebugFunctions.php for TYPO3 9.3.3
     * deprecation: do not use the variable $_EXTKEY any more.
     * new feature: only check for a maximum file size if it is greater than 0

2018-08-21 Franz Holzinger <franz@ttproducts.de>
    * support for TYPO3 8.7.x: Remove the parameter $debugLevel which has never been used.
        Global function debug() initializes its 6th argument to constant E_DEBUG which does not exist and then defaults to string 'E_DEBUG'. This raises a PHP 7.2 warning. see bug #83200.
    * Remove the file ext_autoload.php because composer will do this job.

2018-08-11 Franz Holzinger <franz@ttproducts.de>
    * support for TYPO3 9.3.x: see the manual for instructions

2018-06-05  Franz Holzinger  <franz@ttproducts.de>
    * bugfix: only use the hooks if the IP addresses and the TYPO3 mode match

2018-05-28  Franz Holzinger  <franz@ttproducts.de>
    * new feature: option to set a regular expression for sys_log entries which will not produce an entry in the debug log. This is needed in order not to overwrite a debug file with uninteresting no_cache warnings.
    * do not debug sys_log if $params['initLog'] is true

2018-04-18  Franz Holzinger  <franz@ttproducts.de>